include/psr/c/element.h

// Opaque handle type
typedef struct psr_element psr_element_t;