bindings/dart/lib/src/ffi/bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names
// Auto-generated by ffigen. Do not edit.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI bindings for PSR Database C API
class PsrDatabaseBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PsrDatabaseBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PsrDatabaseBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Char> psr_error_string(
    int error,
  ) {
    return _psr_error_string(
      error,
    );
  }

  late final _psr_error_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'psr_error_string');
  late final _psr_error_string =
      _psr_error_stringPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<ffi.Char> psr_version() {
    return _psr_version();
  }

  late final _psr_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'psr_version');
  late final _psr_version =
      _psr_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  psr_database_options_t psr_database_options_default() {
    return _psr_database_options_default();
  }

  late final _psr_database_options_defaultPtr =
      _lookup<ffi.NativeFunction<psr_database_options_t Function()>>(
          'psr_database_options_default');
  late final _psr_database_options_default = _psr_database_options_defaultPtr
      .asFunction<psr_database_options_t Function()>();

  ffi.Pointer<psr_database_t> psr_database_open(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<psr_database_options_t> options,
  ) {
    return _psr_database_open(
      path,
      options,
    );
  }

  late final _psr_database_openPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<psr_database_t> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<psr_database_options_t>)>>('psr_database_open');
  late final _psr_database_open = _psr_database_openPtr.asFunction<
      ffi.Pointer<psr_database_t> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<psr_database_options_t>)>();

  ffi.Pointer<psr_database_t> psr_database_from_migrations(
    ffi.Pointer<ffi.Char> db_path,
    ffi.Pointer<ffi.Char> migrations_path,
    ffi.Pointer<psr_database_options_t> options,
  ) {
    return _psr_database_from_migrations(
      db_path,
      migrations_path,
      options,
    );
  }

  late final _psr_database_from_migrationsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<psr_database_t> Function(ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>, ffi.Pointer<psr_database_options_t>)>>(
      'psr_database_from_migrations');
  late final _psr_database_from_migrations =
      _psr_database_from_migrationsPtr.asFunction<
          ffi.Pointer<psr_database_t> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<psr_database_options_t>)>();

  ffi.Pointer<psr_database_t> psr_database_from_schema(
    ffi.Pointer<ffi.Char> db_path,
    ffi.Pointer<ffi.Char> schema_path,
    ffi.Pointer<psr_database_options_t> options,
  ) {
    return _psr_database_from_schema(
      db_path,
      schema_path,
      options,
    );
  }

  late final _psr_database_from_schemaPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<psr_database_t> Function(ffi.Pointer<ffi.Char>,
                  ffi.Pointer<ffi.Char>, ffi.Pointer<psr_database_options_t>)>>(
      'psr_database_from_schema');
  late final _psr_database_from_schema =
      _psr_database_from_schemaPtr.asFunction<
          ffi.Pointer<psr_database_t> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<psr_database_options_t>)>();

  void psr_database_close(
    ffi.Pointer<psr_database_t> db,
  ) {
    return _psr_database_close(
      db,
    );
  }

  late final _psr_database_closePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<psr_database_t>)>>(
      'psr_database_close');
  late final _psr_database_close = _psr_database_closePtr
      .asFunction<void Function(ffi.Pointer<psr_database_t>)>();

  int psr_database_is_healthy(
    ffi.Pointer<psr_database_t> db,
  ) {
    return _psr_database_is_healthy(
      db,
    );
  }

  late final _psr_database_is_healthyPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<psr_database_t>)>>(
      'psr_database_is_healthy');
  late final _psr_database_is_healthy = _psr_database_is_healthyPtr
      .asFunction<int Function(ffi.Pointer<psr_database_t>)>();

  ffi.Pointer<ffi.Char> psr_database_path(
    ffi.Pointer<psr_database_t> db,
  ) {
    return _psr_database_path(
      db,
    );
  }

  late final _psr_database_pathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<psr_database_t>)>>('psr_database_path');
  late final _psr_database_path = _psr_database_pathPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<psr_database_t>)>();

  int psr_database_current_version(
    ffi.Pointer<psr_database_t> db,
  ) {
    return _psr_database_current_version(
      db,
    );
  }

  late final _psr_database_current_versionPtr = _lookup<
          ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<psr_database_t>)>>(
      'psr_database_current_version');
  late final _psr_database_current_version = _psr_database_current_versionPtr
      .asFunction<int Function(ffi.Pointer<psr_database_t>)>();

  int psr_database_set_version(
    ffi.Pointer<psr_database_t> db,
    int version,
  ) {
    return _psr_database_set_version(
      db,
      version,
    );
  }

  late final _psr_database_set_versionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<psr_database_t>,
              ffi.Int64)>>('psr_database_set_version');
  late final _psr_database_set_version = _psr_database_set_versionPtr
      .asFunction<int Function(ffi.Pointer<psr_database_t>, int)>();

  int psr_database_migrate_up(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> migrations_path,
  ) {
    return _psr_database_migrate_up(
      db,
      migrations_path,
    );
  }

  late final _psr_database_migrate_upPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>)>>('psr_database_migrate_up');
  late final _psr_database_migrate_up = _psr_database_migrate_upPtr.asFunction<
      int Function(ffi.Pointer<psr_database_t>, ffi.Pointer<ffi.Char>)>();

  int psr_database_begin_transaction(
    ffi.Pointer<psr_database_t> db,
  ) {
    return _psr_database_begin_transaction(
      db,
    );
  }

  late final _psr_database_begin_transactionPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<psr_database_t>)>>(
      'psr_database_begin_transaction');
  late final _psr_database_begin_transaction =
      _psr_database_begin_transactionPtr
          .asFunction<int Function(ffi.Pointer<psr_database_t>)>();

  int psr_database_commit(
    ffi.Pointer<psr_database_t> db,
  ) {
    return _psr_database_commit(
      db,
    );
  }

  late final _psr_database_commitPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<psr_database_t>)>>(
      'psr_database_commit');
  late final _psr_database_commit = _psr_database_commitPtr
      .asFunction<int Function(ffi.Pointer<psr_database_t>)>();

  int psr_database_rollback(
    ffi.Pointer<psr_database_t> db,
  ) {
    return _psr_database_rollback(
      db,
    );
  }

  late final _psr_database_rollbackPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<psr_database_t>)>>(
      'psr_database_rollback');
  late final _psr_database_rollback = _psr_database_rollbackPtr
      .asFunction<int Function(ffi.Pointer<psr_database_t>)>();

  int psr_database_create_element(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<psr_element_t> element,
  ) {
    return _psr_database_create_element(
      db,
      collection,
      element,
    );
  }

  late final _psr_database_create_elementPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(ffi.Pointer<psr_database_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<psr_element_t>)>>('psr_database_create_element');
  late final _psr_database_create_element =
      _psr_database_create_elementPtr.asFunction<
          int Function(ffi.Pointer<psr_database_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<psr_element_t>)>();

  psr_read_result_t psr_database_read_scalar_parameters(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<ffi.Char> attribute,
  ) {
    return _psr_database_read_scalar_parameters(
      db,
      collection,
      attribute,
    );
  }

  late final _psr_database_read_scalar_parametersPtr = _lookup<
      ffi.NativeFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psr_database_read_scalar_parameters');
  late final _psr_database_read_scalar_parameters =
      _psr_database_read_scalar_parametersPtr.asFunction<
          psr_read_result_t Function(ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  psr_read_result_t psr_database_read_scalar_parameter(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<ffi.Char> attribute,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _psr_database_read_scalar_parameter(
      db,
      collection,
      attribute,
      label,
    );
  }

  late final _psr_database_read_scalar_parameterPtr = _lookup<
      ffi.NativeFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psr_database_read_scalar_parameter');
  late final _psr_database_read_scalar_parameter =
      _psr_database_read_scalar_parameterPtr.asFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  psr_read_result_t psr_database_read_vector_parameters(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<ffi.Char> attribute,
  ) {
    return _psr_database_read_vector_parameters(
      db,
      collection,
      attribute,
    );
  }

  late final _psr_database_read_vector_parametersPtr = _lookup<
      ffi.NativeFunction<
          psr_read_result_t Function(
              ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('psr_database_read_vector_parameters');
  late final _psr_database_read_vector_parameters =
      _psr_database_read_vector_parametersPtr.asFunction<
          psr_read_result_t Function(ffi.Pointer<psr_database_t>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  psr_read_result_t psr_database_read_vector_parameter(
    ffi.Pointer<psr_database_t> db,
    ffi.Pointer<ffi.Char> collection,
    ffi.Pointer<ffi.Char> attribute,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _psr_database_read_vector_parameter(
      db,
      collection,
      attribute,
      label,
    );
  }
